chore: add changelog script

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require-dev": {
         "marcocesarato/php-conventional-changelog": "^1.17"
+    },
+    "scripts": {
+        "changelog": "conventional-changelog"
     }
 }
